# ConsentBased_DataSharing

./: .env.example  .gitignore  README.md  SETUP.md  deployment.json  package-lock.json  package.json
contracts/: deploy.py  pyproject.toml
contracts/smart_contracts/access_logger/: contract.py
contracts/smart_contracts/consent_manager/: contract.py
contracts/smart_contracts/credential_issuer/: contract.py
contracts/tests/: conftest.py
scripts/: deploy-testnet.js
